# homework_OOP

./: .coverage  .flake8  .gitignore  README.md  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_main_py.html  z_145eef247bfb46b6_models_py.html  z_145eef247bfb46b6_utils_py.html
src/: main.py  models.py  utils.py
tests/: test_models.py
